<resources>
    <string name="app_name">Paseos virtuales APP</string>
    <string name="action_settings">Settings</string>
    <string name="init_description">Paseos virtuales es una aplicación que mediante la realidad aumentada (RA), permite la visualización de información histórica y objetos que solían existir en lugares patrimoniales.</string>
    <string name="no_account_init">¿Todavía no tienes una cuenta?</string>
    <string name="register_init">Registrate haciendo click aquí</string>
    <string name="signup_title">Registrate</string>
    <string name="signup">Registrarse</string>
    <string name="already_account">Tienes una cuenta?</string>
    <string name="signin_signup">Ingresa</string>
    <string name="email">Email</string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="upload">Subir</string>
    <string name="updateProfile">Actualizar datos</string>
    <string name="signin">Iniciar Sesión</string>
    <string name="ingresar">Ingresar</string>
    <string name="home">Inicio</string>
    <string name="map">Ubicación</string>
    <string name="ra">RA</string>
    <string name="detail_name">Nombre: </string>
    <string name="detail_description">Descripción: </string>
    <string name="detail_extra">Información Extra:</string>
    <string name="detail_date">Fecha Historica: </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_ar">ArActivity</string>
    <string name="control_name">UI in AR</string>
</resources>