<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.PaseosVirtuales.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.PaseosVirtuales.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_name"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/detail_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_description"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/detail_detail_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_extra"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/detail_extra_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_date"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/detail_date_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>